web: Prevent wrapping in the memory and image textual size col
So that "XXX MiB / XXX MiB" fits.

 * Used white-space nowrap instead.

--- a/src/web/cockpit.css
+++ b/src/web/cockpit.css
@@ -535,6 +535,7 @@ a {
 .image-col-size-text {
     width: 100px;
     text-align: right;
+    white-space: nowrap;
 }
 
 .image-col-created {
